[gd_scene load_steps=6 format=2]

[ext_resource path="res://Prefabs/Styles/Fonts/Size40.tres" type="DynamicFont" id=1]
[ext_resource path="res://Prefabs/Elements/ValueBox.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/Elements/InteractiveButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Icons/up-arrow.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="ValueBox" type="Label"]
margin_right = 80.0
margin_bottom = 54.0
mouse_filter = 1
custom_colors/font_color = Color( 0.498039, 0.768627, 0.992157, 1 )
custom_fonts/font = ExtResource( 1 )
text = "35.5"
valign = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -615.0
margin_top = -24.0
margin_right = -32.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0.14902, 0.6, 0.984314, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Salary"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownBtn" parent="." instance=ExtResource( 3 )]
modulate = Color( 0.14902, 0.6, 0.984314, 1 )
margin_left = 120.0
margin_top = 20.0
margin_right = 185.0
margin_bottom = 100.0

[node name="UpBtn" parent="." instance=ExtResource( 3 )]
modulate = Color( 0.14902, 0.6, 0.984314, 1 )
margin_left = 120.0
margin_top = -44.0
margin_right = 185.0
margin_bottom = 36.0
icon = ExtResource( 4 )

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
margin_top = -2.0
margin_right = 130.0
margin_bottom = 56.0
focus_mode = 1
custom_colors/font_color = Color( 0.498039, 0.768627, 0.992157, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "35.5"
max_length = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VirtualKeyboardTimer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="pressed" from="DownBtn" to="." method="_on_DownBtn_pressed"]
[connection signal="pressed" from="UpBtn" to="." method="_on_UpBtn_pressed"]
[connection signal="gui_input" from="LineEdit" to="." method="_on_LineEdit_gui_input"]
